* Minor spacing tweaks for request membergroup and edit registration agreement pages. (Profile.template.php, Register.template.php, admin.css) [Bugs 4530, 4531]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@10280 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/admin.css
+++ b/Themes/default/css/admin.css
@@ -541,11 +541,11 @@ dl.themes_list dd
 ------------------------------------------------- */
 .agreement, .reserved_names
 {
-	padding: 0 5px;
+	padding: 0;
 }
-#agreement
+#agreement, #reserved
 {
-	width: 100%;
+	width: 99%;
 }
 
 /* Styles for the moderation center.
